deployments/traefik/external/immich-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-database
  namespace: default
  labels:
    app: immich-database
spec:
  externalName: 192.168.10.110  # Replace with your NAS IP or DNS name
  type: ExternalName
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: default
  labels:
    app: immich-machine-learning
spec:
  externalName: 192.168.10.110  # Replace with your NAS IP or DNS name
  type: ExternalName
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: default
  labels:
    app: immich-server
spec:
  externalName: 192.168.10.110  # Replace with your NAS IP or DNS name
  type: ExternalName
  ports:
    - port: 30041
      targetPort: 30041
      protocol: TCP
