deployments/traefik/external/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: default
spec:
  externalName: 192.168.10.100
  type: ExternalName
  ports:
  - name: websecure
    port: 8006
    targetPort: 8006
