deployments/traefik/external/truenas-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: truenas-server
  namespace: default
  labels:
    app: truenas-server
spec:
  externalName: 192.168.10.110  # Replace with your NAS IP or DNS name
  type: ExternalName
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
