deployments/traefik/external/z2m-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: z2m-server
  namespace: default
  labels:
    app: z2m-server
spec:
  externalName: 192.168.10.110  # Replace with your NAS IP or DNS name
  type: ExternalName
  ports:
    - port: 30065
      targetPort: 30065
      protocol: TCP
