deployments/traefik/external/esphome-ingress .yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.esphome.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: esphome-server
          port: 36052  # Replace with the correct port if needed
          scheme: http  # Assuming HTTP; use https if z2m is using HTTPS
          passHostHeader: true
    - match: Host(`esphome.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: esphome-server
          port: 36052  # Replace with the correct port if needed
          scheme: http
          passHostHeader: true
      middlewares:
        - name: default-headers
  tls:
    secretName: local-tigovanroy-space-production-tls  # Same TLS cert used for other services
