deployments/traefik/external/z2m-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: z2m
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.z2m.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: z2m-server
          port: 30065  # Replace with the correct port if needed
          scheme: http  # Assuming HTTP; use https if z2m is using HTTPS
          passHostHeader: true
    - match: Host(`z2m.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: z2m-server
          port: 30065  # Replace with the correct port if needed
          scheme: http
          passHostHeader: true
      middlewares:
        - name: default-headers
  tls:
    secretName: local-tigovanroy-space-production-tls  # Same TLS cert used for other services
